--- a/backend/package.json
+++ b/backend/package.json
@@ -35,14 +35,22 @@
     "@rollup/plugin-node-resolve": "^13.3.0",
     "@rollup/plugin-replace": "^4.0.0",
     "@rollup/plugin-typescript": "^8.3.4",
-    "@types/lodash": "^4.14.182",
-    "@types/node": "^18.6.4",
-    "lodash": "^4.17.21",
+    "@types/i18next": "^13.0.0",
+    "@types/jws": "^3.2.4",
+    "@types/nodemailer": "^6.4.5",
+    "i18next": "^21.9.0",
+    "jws": "^4.0.0",
+    "nodemailer": "^6.7.7",
     "rollup": "^2.77.2",
     "rollup-plugin-uglify": "^6.0.4",
     "ts-node": "^10.9.1",
     "tslib": "^2.4.0",
     "typescript": "^4.7.4"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "@types/lodash": "^4.14.182",
+    "@types/node": "^18.7.1",
+    "lodash": "^4.17.21",
+    "reflect-metadata": "^0.1.13"
+  }
 }
