--- a/.gitmodules
+++ b/.gitmodules
@@ -6,3 +6,11 @@
 	path = backend/src/fi/hg/backend
 	url = git@github.com:heusalagroup/fi.hg.backend.git
 	branch = main
+[submodule "testing/src/fi/hg/core"]
+	path = testing/src/fi/hg/core
+	url = git@github.com:heusalagroup/fi.hg.core.git
+	branch = main
+[submodule "testing/src/fi/hg/backend"]
+	path = testing/src/fi/hg/backend
+	url = git@github.com:heusalagroup/fi.hg.backend.git
+	branch = main
